# ArkoiL

./: .directory  .gitignore  .gitmodules  .stage redesign.kate-swp  README.md  concept.txt  install.sh  problems.txt  stage redesign
compiler/: ArkoiCompiler_3.tar.gz.REMOVED.git-id  ArkoiCompiler_4.tar.gz.REMOVED.git-id  CMakeLists.txt  build.gradle  c++.tar.gz.REMOVED.git-id  settings.gradle
compiler/ArkoiCompiler/: build.gradle  settings.gradle
compiler/ArkoiCompiler/gradle/wrapper/: gradle-wrapper.properties
compiler/ArkoiCompiler/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
compiler/ArkoiCompiler/javadoc/com/arkoisystems/arkoicompiler/: ArkoiClass.html  ArkoiCompiler.html  ArkoiCompilerTest.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
compiler/ArkoiCompiler/javadoc/com/arkoisystems/arkoicompiler/bootstrap/: Bootstrap.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
compiler/ArkoiCompiler/javadoc/com/arkoisystems/arkoicompiler/bootstrap/class-use/: Bootstrap.html
compiler/ArkoiCompiler/javadoc/com/arkoisystems/arkoicompiler/class-use/: ArkoiClass.html  ArkoiCompiler.html  ArkoiCompilerTest.html
compiler/ArkoiCompiler/javadoc/com/arkoisystems/arkoicompiler/stage/: AbstractStage.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
compiler/ArkoiCompiler/javadoc/com/arkoisystems/arkoicompiler/stage/class-use/: AbstractStage.html
compiler/ArkoiCompiler/javadoc/com/arkoisystems/arkoicompiler/stage/errorHandler/: AbstractError.html  ErrorHandler.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
compiler/ArkoiCompiler/javadoc/com/arkoisystems/arkoicompiler/stage/lexcialAnalyzer/: LexicalAnalyzer.html  LexicalErrorHandler.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
compiler/ArkoiCompiler/javadoc/com/arkoisystems/arkoicompiler/stage/semanticAnalyzer/: SemanticAnalyzer.html  SemanticErrorHandler.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
compiler/ArkoiCompiler/javadoc/com/arkoisystems/arkoicompiler/stage/syntaxAnalyzer/: SyntaxAnalyzer.html  SyntaxErrorHandler.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
compiler/ArkoiCompiler/javadoc/com/arkoisystems/arkoicompiler/utils/: FileUtils.html  Variables.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
compiler/ArkoiCompiler/javadoc/com/arkoisystems/arkoicompiler/utils/class-use/: FileUtils.html  Variables.html
compiler/ArkoiCompiler/javadoc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
compiler/ArkoiCompiler/src/main/java/com/arkoisystems/arkoicompiler/: ArkoiClass.java  ArkoiCompiler.java
compiler/ArkoiCompiler/src/main/java/org/arkoisystems/compiler/: ArkoiCompiler.java
compiler/ArkoiCompiler/src/test/java/com/arkoisystems/arkoicompiler/: ArkoiCompilerTest.java
compiler/c++/: CMakeLists.txt  main.cpp
compiler/c++/compiler/: compiler.cpp  compiler.h  options.h  utils.h
compiler/c++/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
compiler/c++/parser/: astnode.h  parser.cpp  parser.h
compiler/c++/src/: main.cpp  utils.h
compiler/c++/src/codegen/: codegen.cpp  codegen.h
compiler/c++/src/compiler/: compiler.cpp  compiler.h  error.cpp  error.h  options.h  utils.h
compiler/c++/src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
compiler/c++/src/parser/: astnode.h  astnodes.cpp  astnodes.h  parser.cpp  parser.h  symboltable.cpp  symboltable.h  typeresolver.cpp  typeresolver.h
compiler/c++/src/semantic/: scopecheck.cpp  scopecheck.h  typecheck.cpp  typecheck.h
compiler/cmake/: FindArkoiLLD.cmake  FindArkoiLLVM.cmake  FindLLD.cmake  FindLLVM.cmake  TEST_FindLLVM.cmake
compiler/include/codegen/: codegen.h
compiler/include/compiler/: compiler.h  error.h  options.h
compiler/include/lexer/: lexer.h
compiler/include/parser/: astnodes.h  parser.h  symboltable.h
compiler/include/semantic/: inliner.h  scopecheck.h  typecheck.h  typeresolver.h
compiler/include/utils/: ansi.h  astprinter.h  utils.h
compiler/java/: build.gradle
compiler/java/gradle/wrapper/: gradle-wrapper.properties
compiler/java/src/main/java/com/arkoisystems/compiler/: CompilerClass.java
compiler/natives/: system.ark
compiler/src/: CMakeLists.txt  main.cpp  utils.h
compiler/src/codegen/: codegen.cpp  codegen.h  inliner.cpp
compiler/src/compiler/: compiler.cpp  compiler.h  error.cpp  error.h  options.h
compiler/src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
compiler/src/main/java/com/arkoisystems/arkoicompiler/: ArkoiClass.java  ArkoiCompiler.java  ArkoiError.java  Compiler.java  CompilerClass.java  ErrorHandler.java
compiler/src/main/java/com/arkoisystems/compiler/: Compiler.java  CompilerClass.java
compiler/src/main/resources/grammar/: lexer.ebnf  parser.ebnf
compiler/src/options/: OptionParser.cpp  OptionParser.h
compiler/src/parser/: allnodes.h  astnodes.cpp  astnodes.h  parser.cpp  parser.h  symboltable.cpp  symboltable.h  typeresolver.cpp  typeresolver.h
compiler/src/semantic/: inliner.cpp  inliner.h  scopecheck.cpp  scopecheck.h  typecheck.cpp  typecheck.h  typeresolver.cpp  typeresolver.h
compiler/src/test/groovy/com/arkoisystems/arkoicompiler/: ArkoiClassSpec.groovy  ArkoiCompilerSpec.groovy  CompilerSpec.groovy
compiler/src/test/groovy/com/arkoisystems/compiler/: CompilerSpec.groovy
compiler/src/utils/: astprinter.cpp  astprinter.h  optionparser.cpp  utils.h
compiler/test/: CMakeLists.txt
compiler/test/tests/: levenshtein.cpp  levenstein.cpp
compiler/tests/: CMakeLists.txt
(+1625 files in other folders)
